[project]
name = "aeos-env"
version = "0.1.0"
description = "Autonomous Enterprise Operations Simulator"
authors = [{ name = "SudalaiMuthu" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entrypoint = "app:app"
