[project]
name = "aeos-env"
version = "0.1.0"
description = "Autonomous Enterprise Operations Simulator"
authors = [{ name = "SudalaiMuthu" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
